# cpp-play

./: .gitignore
AI/onnxruntime/: CMakeLists.txt  openveno.build.note.md
AI/onnxruntime/1_MINST/: CMakeLists.txt  main.cpp
AI/onnxruntime/2_MODEL_EXPLORER/: model-explorer.cpp
AI/onnxruntime/3_OpenVINO_EP/Windows/: CMakeLists.txt
AI/onnxruntime/3_OpenVINO_EP/Windows/model-explorer/: CMakeLists.txt  model-explorer.cpp
AI/onnxruntime/3_OpenVINO_EP/Windows/squeezenet_classification/: CMakeLists.txt  squeezenet_cpp_app.cpp
AI/onnxruntime/3_OpenVINO_EP/Windows/squeezenet_classification_io_buffer/: CMakeLists.txt
cast/const_cast/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp
cast/reinterpret_cast/: 1.cpp
cast/static&dynamic_cast/: dynamic_cast.cpp  dynamic_cast_2.cpp  dynamic_cast_diamond.cpp  dynamic_cast_diamond_2.cpp  dynamic_cast_diamond_3.cpp  dynamic_cast_diamond_4_cross_cast.cpp  dynamic_cast_diamond_5.cpp  dynamic_cast_final.cpp  static_cast.cpp
cast/typeid/: 1.cpp
ch1-6/: arr-ptr.cpp  arr1.cpp  carInfo.txt  char.cpp  char2.cpp  char3.cpp  cingolf.cpp  cingolf2.cpp  data.txt  enum.cpp  flaot1.cpp  functionDemo.cpp  getInfo.cpp  hexoct.cpp  hexoct2.cpp  ifstream.cpp  int_limits.cpp  myFirst.cpp  ofstream.cpp  point-with-increment.cpp  pointer1.cpp  sequence-p.cpp  set-timeout.cpp  starstar.cpp  str-cmp.cpp  str-ptr.cpp  str1.cpp  str2.cpp  struct1.cpp
ch10 class/ch10_1_introdution/: stock00.h  usestock0.cpp
ch10 class/ch10_2_constructor_desctructor/: constructor.cpp  destructor.cpp  stock00.cpp  stock00.h
ch10 class/ch10_3_const_member copy/: const_member.cpp
ch10 class/ch10_4_this/: this.cpp
ch10 class/ch10_5_class_scope/: class_scope.cpp
ch10 class/ch10_6_class_static/: class_static.cpp
ch10 class/ch10_7_class_enum/: class_enum.cpp
ch10 class/ch10_8_ADT/: main.cpp  stack.cpp  stack.h
ch11_class_advance/ch11_1_operator_overload/: main.cpp  mytime1.cpp  mytime1.h
ch11_class_advance/ch11_2_friend/: main.cpp  mytime1.cpp  mytime1.h
ch11_class_advance/ch11_3_vector/: main.cpp  vector.cpp  vector.h
ch11_class_advance/ch11_4_1_2_type_cast_flow/: stone.cpp  stonewt.cpp
ch11_class_advance/ch11_4_1_type_cast_class/: stone.cpp  stonewt.cpp  stonewt.h
ch11_class_advance/ch11_4_2_class_cast_type/: stone.cpp  stonewt.cpp  stonewt.h
ch12 memory dynamic alloc/ch12_1_intro/: main.cpp  stringbad.cpp  stringbad.h
ch12 memory dynamic alloc/ch12_2_magic_class_function/: stone.cpp  stonewt.cpp  stonewt.h
ch12 memory dynamic alloc/ch12_3_constructor_problem/: main.cpp
ch12 memory dynamic alloc/ch12_3_copy_constructor_problem/: stringbad.cpp  stringbad.h
ch12 memory dynamic alloc/ch12_4_assignment_problem/: main.cpp
ch12 memory dynamic alloc/ch12_4_copy_assignment_problem/: stringbad.cpp  stringbad.h
ch12 memory dynamic alloc/ch12_5_construct_and_assignment_problem_fix/: main.cpp  stringnew.cpp  stringnew.h
ch12 memory dynamic alloc/ch12_5_copy_construct_and_assignment_problem_fix/: stringnew.cpp  stringnew.h
ch12 memory dynamic alloc/ch12_6_const_ref_return/: main.cpp  stringnew.cpp  stringnew.h
ch12 memory dynamic alloc/ch12_7_positiond_new/: main.cpp
ch13 class inherit/ch13_1_public_derive/: goodPlayer.cpp  goodPlayer.h  main.cpp  tbPlayer.cpp  tbPlayer.h
ch13 class inherit/ch13_2_polymorph/: goodPlayer.cpp  goodPlayer.h  main.cpp  tbPlayer.cpp
ch13 class inherit/ch13_3_polymorph2_virtual/: brass.cpp  brass.h  brassPlus.cpp  brassPlus.h  main.cpp  std.h
ch13 class inherit/ch13_4_2_function_hide/: brass.h  brassPlus.cpp  brassPlus.h  main.cpp  std.h
ch13 class inherit/ch13_4_3_return_type_covariance/: brass.h  brassPlus.h  main.cpp
ch13 class inherit/ch13_4_4_protected/: brass.h  brassPlus.cpp  main.cpp
ch13 class inherit/ch13_4_binding/: brass.cpp  brass.h  brassPlus.h  main.cpp  std.cpp
ch15 friend/ch15.1 friend_class/: main.cpp  (+2 more)
ch17 io/: 1.cpp
ch7 function/: 7_1_prototype.cpp  7_3_2_const_arr.cpp  7_3_4_const_ptr.cpp  7_3_5_const_ptr_change.cpp  7_3_6_2d_arr_param.cpp  7_3_7_2d_arr_param_0.cpp  7_3_arr_param.cpp  7_5_cstring_function.cpp  7_6_struct_func1.cpp  7_7_string_function.cpp  7_8_array_function.cpp  7_9_function_pointer.cpp  7_9_function_pointer2.cpp
ch8 function II/: 8_1_inline_function.cpp  8_2_1_ref.cpp  8_2_2_ref_param.cpp  8_2_3_const_ref_temp_var.cpp  8_2_4_ref_struct.cpp  8_2_5_ref_class_obj.cpp  8_4_function_overload.cpp  8_5_2_function_template_explicitation.cpp  8_5_3_function_overload_resolution.cpp  8_5_4_function_decltype.cpp  8_5_function_template copy.cpp
cmake/: FetchContent.md  file.md
cmake/Findonnxruntime/: CMakeLists.txt  Findonnxruntime.cmake  bat_note.txt.txt  note.txt.txt
cmake/add_custom_cmd/b/: 1.txt  CMakeLists.txt
cmake/add_custom_tgt/: CMakeLists.txt  build.sh
cmake/build_exe/: CMakeLists.txt  cmd.txt  main.c  关于CMakeSettings.json.txt
cmake/build_lib/: CMakeLists.txt  cmd.txt
cmake/cache_var_prop/: CMakeLists.txt  main.c
cmake/final/: CMakeLists.txt  notes.doc
cmake/final-2/: CMakeLists.txt  notes.doc  ~$notes.doc
cmake/final-2/cli/: recognize.c
cmake/final-2/cmake/: FindZLIB.cmake  Findonnxruntime.cmake
cmake/final-2/cmake/libpng/: libpng16-debug.cmake
cmake/final-2/src/: num_recognizer.cpp
cmake/final/cli/: recognize.c
cmake/final/cmake/: FindZLIB.cmake  Findlibpng.cmake
cmake/final/src/: num_recognizer.cpp
cmake/generator_exp_4_target/: CMakeLists.txt
cmake/genex_eval/: CMakeLists.txt
cmake/modules/FindThreads/: CMakeLists.txt
cmake/opengl/2/: CMakeLists.txt  Utils.cpp  Utils.h  build.sh  cmake.sh  fragShader.glsl  main.cpp  vertShader.glsl
cmake/phony_target_import_exe/: CMakeLists.txt  cmd.txt  main.c
cmake/phony_target_import_lib_subdir/: CMakeLists.txt  CMakeSettings.json
cmake/static_lib/: CMakeLists.txt  cmake.sh  cmd.txt
cmake/target_genex_eval/: CMakeLists.txt
cmake/transitivity_2/: CMakeLists.txt
cmake/use_obj_lib/: CMakeLists.txt  main.c
cmake/use_pre_built_static/: CMakeLists.txt  cmd.txt  main.c
cmake/use_prebuild/: CMakeLists.txt  main.c
enum/: main.cpp
smartPointers/: 1.cpp  2.cpp  3.cpp
(+270 files in other folders)
